# oqtopus-manager

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  README.template.md  mkdocs.yml  pyproject.toml
.claude/commands/: find-refactoring.md  new-editor.md  new-template.md  review-conventions.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/instructions/: commit-message.instructions.md  pull-request-description.instructions.md
.github/workflows/: ci.yaml  labeler.yaml  release.yaml
config/: config.yaml  config.yaml.example  logging.yaml
docs/: index.md
docs/developer_guidelines/: access_control.md  development_flow.md  permissions.md  setup.md
docs/usage/: authentication.md  configuration.md  getting_started.md  permissions.md
src/oqtopus_manager/: cli.py  config.py  main.py
src/oqtopus_manager/auth/: __init__.py  _config.py  _middleware.py  _providers.py  base.py  config.py  header_provider.py  middleware.py  null_provider.py  permissions.py  providers.py
src/oqtopus_manager/auth/fastapi/: __init__.py  depends.py  middleware.py
src/oqtopus_manager/models/: environment.py
src/oqtopus_manager/routers/: _dotenv_routes.py  _file_edit.py  _log_routes.py  _utils.py  app_settings.py  backend.py  backend_environments.py  browse.py  cloud_local.py  cloud_local_environments.py  debug.py  environments.py  me.py  meta.py
src/oqtopus_manager/routers/backend/: __init__.py  _utils.py  detail.py  dotenv.py  list.py  log.py  service_config.py
src/oqtopus_manager/routers/cloud_local/: __init__.py  _utils.py  detail.py  dotenv.py  list.py  log.py
src/oqtopus_manager/templates/: _banner_svg.html  _editor_section.html  _make_editor.html  api_docs.html  app_settings.html  base.html  debug.html  me.html
src/oqtopus_manager/templates/browse/: _picker.html
src/oqtopus_manager/templates/environments/: _modals.html  _settings_dl.html  backend_detail.html  cloud_local_detail.html  detail.html  dotenv.html  list.html  new.html  service_config.html  service_log.html
src/oqtopus_manager/util/: __init__.py
tests/oqtopus_manager/: test_auth_providers.py  test_backend_utils.py  test_browse.py  test_cli.py  test_config.py  test_detail_logic.py  test_dotenv_log_routes.py  test_environment.py  test_file_edit.py  test_permissions.py  test_routes.py  test_service_config.py
tests/oqtopus_manager/auth/: test_base.py  test_header_provider.py  test_providers.py
tests/oqtopus_manager/auth/fastapi/: test_depends.py  test_middleware.py
tests/oqtopus_manager/routers/backend/: test_detail.py  test_utils.py
tests/oqtopus_manager/routers/cloud_local/: test_detail.py
