[project]
name = "oqtopus-manager"
version = "1.0.0"
description = "Local/on-prem management application for OQTOPUS ecosystem"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "oqtopus-team", email = "oqtopus-team@googlegroups.com" }]
keywords = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.14,<4.0"
dependencies = [
  "fastapi>=0.136.3",
  "jinja2>=3.1.6",
  "oqtopus-util>=1.0.1",
  "pyjwt>=2.4.0",
  "python-json-logger>=4.1.0",
  "python-multipart>=0.0.29",
  "pyyaml>=6.0.3",
  "uvicorn[standard]>=0.48.0",
]

[project.urls]
documentation = "https://oqtopus-manager.readthedocs.io/"
repository = "https://github.com/oqtopus-team/oqtopus-manager"

[dependency-groups]
dev = [
  "mypy>=2.1.0",
  "ruff>=0.15.15",
  "types-pyyaml>=6.0.12.20260518",
]
test = [
  "httpx>=0.28.1",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
]
docs = [
  "mkdocs<2.0", # Stay on 1.x to maintain plugin compatibility
  "mkdocs-gen-files>=0.6.1",
  "mkdocs-glightbox>=0.5.2",
  "mkdocs-jupyter>=0.26.3",
  "mkdocs-literate-nav>=0.6.3",
  "mkdocs-macros-plugin>=1.5.0",
  "mkdocs-material>=9.7.6",
  "mkdocstrings[python]>=1.0.4",
  "pymarkdownlnt>=0.9.37",
  "pymdown-extensions>=10.21.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oqtopus_manager"]

[tool.ruff]
preview = true
include = [
  "src/**/*.py",
]
exclude = [
]
lint.select = ["ALL"]
lint.ignore = [
  "COM812",
  "CPY001",
  "D100",
  "D104",
  "D107",
  "D203",
  "D213",
  "ISC001",
]

[tool.mypy]
files = ["src", "tests"]
exclude = [
]

[tool.pytest.ini_options]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pymarkdown]
plugins.line-length.enabled = false            # MD013: Disable line length limit
plugins.first-line-heading.enabled = false     # MD041: Allow files to start without a top-level heading
plugins.code-block-style.enabled = false       # MD046: Disable code block style consistency
plugins.reference-links-images.enabled = false # MD060: Allow inconsistent reference link styles
